--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <form method="POST" action="/api">
+            <input type="email" name="email" placeholder="email" required />
+            <input type="password" name="password" placeholder="password" required />
+            <button type="submit">Submit</button>
+        </form>
     </body>
 </html>
